# wasm-on-cloud

./: .gitignore  Cargo.toml  Dockerfile  README.md  architecture.excalidraw  build-images.sh  dashboard-k8s.sh  deploy.yaml  lodad-k8s.sh  release-app.sh  spin.toml
apps/core-api/: wasm.Dockerfile
cloud-function/: Cargo.toml  Dockerfile
cloud-function/src/: lib.rs
cloud-function_old/: Cargo.toml  Dockerfile  spin.toml
cloud-function_old/src/: lib.rs
k8s/: cluster.yaml  ingress.yaml  lodad-config.sh  redis.yaml  runtime.yaml  wasm.yaml
k8s/wasi-wasm-docker/: namespace.yaml  spec.yaml
k8s/wasm-and-docker/: cluster.yaml
kitchen/: Cargo.toml  Dockerfile  deploy.yaml  spin.toml
kitchen-api/: Cargo.toml
kitchen-api/src/: lib.rs
kitchen/src/: lib.rs
menu-api/: Cargo.toml
menu-api/src/: lib.rs
order-api/: Cargo.toml
order-api/src/: lib.rs
restaurant/: Cargo.toml  deploy.yaml  no-wasm.Dockerfile  spin.toml
restaurant/src/: api.rs  lib.rs
restaurant/src/api/: menu.rs  order.rs
src/: api.rs  lib.rs  main.rs
