[package]
name = "kitchen"
authors = ["ogioldat <tomasz.ogiolda00@gmail.com>"]
description = "Prepares the order"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
bytes = "1.5.0"
http = "0.2"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_bytes = "0.11.12"
serde_json = "1.0.108"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }

[workspace]
