[package]
name = "restaurant"
authors = ["ogioldat <tomasz.ogiolda00@gmail.com>"]
description = "Accepting and serving orders"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
http = "0.2"
serde = { version = "1.0.193", features = ["derive"] }
serde_bytes = "0.11.12"
serde_json = "1.0.108"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v2.0.1" }

[workspace]
